# openair-spgwc

./: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  README.txt
ci-scripts/: Dockerfile.ubuntu18.04  Jenkinsfile-GitHub-Docker  README.txt  checkCodingFormattingRules.sh  flatten_image.py  generateConfigFiles.py  generateHtmlReport.py  sanityCheckDeploy.py  verifySanityCheckDeployment.py
docker/: Dockerfile.centos8  Dockerfile.debug.centos8  Dockerfile.debug.centos8.3dparty  Dockerfile.rhel8  Dockerfile.rhel8-2.oc4-4  Dockerfile.ubuntu  Dockerfile.ubuntu18.04
docs/: FEATURE_SET.md  FEATURE_SET_PGW.md  FEATURE_SET_SGW.md
etc/: spgw_c.conf  spgw_c.json  spgw_u.conf
openshift/: README.md  build-config.debug.centos8.3dparty.yml  build-config.debug.centos8.yml  build_image.debug.centos8  build_image.debug.centos8.3dparty  image-stream.debug.centos8.3dparty.yml  image-stream.debug.centos8.yml  oai-spgwc-build-config.yml  oai-spgwc-image-stream.yml
scripts/: Jenkinsfile  Jenkinsfile-GitHub-Docker  README.txt  entrypoint.sh
src/common/: 3gpp_23.003.h  3gpp_24.008.h  3gpp_29.244.h  3gpp_29.274.h  3gpp_29.281.h  3gpp_commons.h  CMakeLists.txt  common_defs.h  common_root_types.c  common_root_types.h  endpoint.hpp  logger.cpp  logger.hpp  rfc_1332.h  rfc_1877.h  serializable.hpp  thread_sched.h
src/common/msg/: itti_async_shell_cmd.hpp  itti_msg_s11.hpp  itti_msg_s1u.hpp  itti_msg_s5s8.hpp  itti_msg_sx_restore.hpp  itti_msg_sxab.hpp
src/common/utils/: 3gpp_conversions.cpp  3gpp_conversions.hpp  CMakeLists.txt  async_shell_cmd.cpp  async_shell_cmd.hpp  conversions.cpp  conversions.hpp  epc.cpp  epc.h  epc_conversions.hpp  fqdn.cpp  get_gateway_netlink.cpp  get_gateway_netlink.hpp  if.cpp  if.hpp  pid_file.cpp  pid_file.hpp  string.cpp  string.hpp  thread_sched.cpp  thread_sched.hpp  uint_generator.hpp
src/gtpv1u/: 3gpp_29.281.cpp  3gpp_29.281.hpp  CMakeLists.txt  gtpu.h  gtpv1u.cpp  gtpv1u.hpp  msg_gtpv1u.hpp
src/gtpv2c/: 3gpp_29.274.cpp  3gpp_29.274.hpp  CMakeLists.txt  gtpv2c.cpp  gtpv2c.hpp  msg_gtpv2c.hpp
src/include/: 3gpp_23.003.h  3gpp_24.008.h  3gpp_29.244.h  3gpp_29.274.h  3gpp_29.281.h  EndPoint.hpp  Gtpv2cApplication.hpp  Gtpv2cService.hpp  Logger.hpp  PfcpApplication.hpp  PfcpService.hpp  Serializable.hpp  SpgwcApp.hpp  SpgwcConfig.hpp  SpgwcContext.hpp  SpgwcPco.hpp  SpgwcProcedure.hpp  SpgwcS11.hpp  SpgwcSxab.hpp  TimerApplication.hpp  TimerService.hpp  UdpApplication.hpp  UdpService.hpp  UintGenerator.hpp  rfc_1332.h
src/include_ext/: common.h
src/include_ext/rapidjson/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
src/include_ext/rapidjson/error/: en.h  error.h
src/include_ext/rapidjson/internal/: biginteger.h  clzll.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
src/include_ext/rapidjson/msinttypes/: inttypes.h  stdint.h
src/itti/: itti.cpp  itti.hpp  itti_msg.cpp  itti_msg.hpp
src/oai_spgwc/: CMakeLists.txt  PfcpUpNodes.cpp  PfcpUpNodes.hpp  main.cpp  options.cpp  options.hpp  pgw_app.cpp  pgw_app.hpp  pgw_config.cpp  pgw_config.hpp  pgw_context.cpp  pgw_context.hpp  pgw_paa_dynamic.hpp  pgw_pcef_emulation.hpp  pgw_pco.cpp  pgw_pco.hpp  pgw_pfcp_association.cpp  pgw_pfcp_association.hpp  pgw_s5s8.cpp  pgw_s5s8.hpp  pgwc_procedure.cpp  pgwc_procedure.hpp  pgwc_sxab.cpp  pgwc_sxab.hpp  rest_handler.cpp  rest_handler.h  sgwc_app.cpp  sgwc_app.hpp  sgwc_config.cpp  sgwc_config.hpp  sgwc_eps_bearer_context.cpp  sgwc_eps_bearer_context.hpp  sgwc_pdn_connection.cpp  sgwc_procedure.cpp  sgwc_procedure.hpp  sgwc_s11.cpp  sgwc_s11.hpp  sgwc_s5s8.cpp  sgwc_s5s8.hpp
src/oai_spgwu/: CMakeLists.txt  main.cpp  options.cpp
src/pfcp/: 3gpp_29.244.cpp  3gpp_29.244.hpp  CMakeLists.txt  msg_pfcp.hpp  pfcp.cpp  pfcp.hpp
src/pgwc/: CMakeLists.txt  pgw_app.cpp  pgw_app.hpp  pgw_config.cpp  pgw_config.hpp  pgw_context.cpp  pgw_context.hpp  pgw_paa_dynamic.hpp  pgw_pcef_emulation.hpp  pgw_pco.cpp  pgw_pco.hpp  pgw_pfcp_association.cpp  pgw_pfcp_association.hpp  pgw_s5s8.cpp  pgw_s5s8.hpp  pgwc_procedure.cpp  pgwc_procedure.hpp  pgwc_sxab.cpp  pgwc_sxab.hpp
src/sgwc/: CMakeLists.txt  sgwc_app.cpp  sgwc_app.hpp  sgwc_config.cpp  sgwc_config.hpp  sgwc_eps_bearer_context.cpp  sgwc_eps_bearer_context.hpp  sgwc_pdn_connection.cpp  sgwc_procedure.cpp  sgwc_procedure.hpp  sgwc_s11.cpp  sgwc_s11.hpp  sgwc_s5s8.cpp  sgwc_s5s8.hpp
src/spgwu/: CMakeLists.txt  spgwu_app.cpp  spgwu_app.hpp  spgwu_config.cpp  spgwu_config.hpp  spgwu_pfcp_association.cpp  spgwu_pfcp_association.hpp  spgwu_sx.cpp  spgwu_sx.hpp
src/spgwu/simpleswitch/: CMakeLists.txt  pfcp_far.cpp  pfcp_far.hpp  pfcp_pdr.cpp  pfcp_pdr.hpp  pfcp_session.cpp  pfcp_session.hpp  pfcp_switch.cpp  pfcp_switch.hpp  spgwu_s1u.cpp  spgwu_s1u.hpp
src/udp/: CMakeLists.txt  udp.cpp  udp.hpp
